<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <ImageView
        android:id="@+id/id_poster"
        android:layout_width="200dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/id_poster"
           app:layout_constraintStart_toStartOf="parent"
           android:orientation="vertical"
           app:layout_constraintEnd_toEndOf="parent"
           android:padding="16dp">

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:textColor="@color/black"/>

               <TextView
                   android:id="@+id/id_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/movie_title"
                   android:textSize="20sp"/>

           </LinearLayout>

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/release_date"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:textColor="@color/black"/>

               <TextView
                   android:id="@+id/id_release_date"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/release_date_of_the_movie"
                   android:textSize="20sp"/>

           </LinearLayout>

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/total_votes"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:textColor="@color/black"/>

               <TextView
                   android:id="@+id/id_vote_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/number_of_votes"
                   android:textSize="20sp"/>

           </LinearLayout>

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/overview"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:textColor="@color/black"/>


               <ScrollView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">


                       <TextView
                           android:id="@+id/id_overview"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/description_of_the_movie"
                           android:textSize="20sp"/>

               </ScrollView>

           </LinearLayout>

       </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>